--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -48,3 +48,13 @@
 .carousel-arrow > img {
   pointer-events: none;
 }
+
+@media (width >= 700px) {
+  .carousel-wrapper {
+    
+  }
+
+  .carousel-element > img {
+    border-radius: .5rem;
+  }
+}
